更新配置文件

--- a/.env.staging
+++ b/.env.staging
@@ -1,9 +1,9 @@
 # 页面标题
 VUE_APP_TITLE = 若依管理系统
 
-BABEL_ENV = production
+BABEL_ENV = development
 
-NODE_ENV = production
+NODE_ENV = development
 
 # 测试环境配置
 ENV = 'staging'
